[package]
name = "repuppetry"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
